Add tests for Patients and Plants. Change the SharedFixture from a `ICollectionFixture` to a `iAssemblyFixture`. This will only create the fixture once at the beginning of the test run. This cuts back on the number of calls to METRC. This also enforces a rate limit of 50 calls/second for all tests.
